# gts

./: .arch-inventory  .usermap  AUTHORS  Makefile.am  THANKS  autogen.sh  configure.in  gts.spec
debian/: changelog  changelog.sh  control  libgts-snapshot-dev.install  libgts-snapshot.install  rules
doc/: .arch-inventory  gts-docs.sgml  gts-sections.txt  isocube.fig
doc/manpages/: Makefile.am  delaunay.1  gts-config.1  gts2dxf.1  gts2oogl.1  gts2stl.1  gtscheck.1  gtscompare.1  gtstemplate.1  happrox.1  stl2gts.1  transform.1
doc/tmpl/: bb-trees.sgml  boolean.sgml  containee.sgml  container.sgml  curvature.sgml  delaunay.sgml  edges.sgml  extended_heaps.sgml  faces.sgml  fifo.sgml  graph.sgml  gts-unused.sgml  heaps.sgml  hsplit.sgml  hsurface.sgml  iso.sgml  kd-Trees.sgml  matrices.sgml  misc.sgml  object.sgml  oocs.sgml  partition.sgml  pgraph.sgml  points.sgml  psurface.sgml  segments.sgml  simplify.sgml  split.sgml  stats.sgml  surfaces.sgml  triangles.sgml  vertices.sgml  wgraph.sgml
examples/: .arch-inventory  Makefile.am  delaunay.c  happrox.c  revolution.c  set.c  volume.c
rpm/: gts.spec
src/: .arch-inventory  bbtree.c  cdt.c  eheap.c  gts.h  isotetra.c  misc.c  rounding.h
test/boolean/: .arch-inventory
test/clipping/: .arch-inventory
test/coarsen/: .arch-inventory
test/delaunay/: .arch-inventory
tools/: .arch-inventory  Makefile.am  cvs2dist  gts2oogl.c  stl2gts.c
